bugfix for abilities not showing up, sort them to the end of the list

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,9 +8,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 
   overflow: hidden;
+  min-height: 100vh;
 
   background-image: url('/assets/bg.png');
   background-color: #987e8c;
