--- a/src/components/PartyPanel.scss
+++ b/src/components/PartyPanel.scss
@@ -40,7 +40,7 @@
       font-weight: normal;
       color: $rust_light;
       padding: 0 20px 0;
-      margin: 90px auto 0;
+      margin: 72px auto 0;
       text-align: center;
 
       .asset {
